@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Add clear method, to remove metric values
 
 0.020     2020-03-23 12:57:16+11:00 Australia/Melbourne
 - Rewrite to use Hash::SharedMem for the backend
